--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -11,7 +11,7 @@
     "dev": "preact watch",
     "test": "mocha --require babel-polyfill --require babel-register",
     "lint": "eslint src",
-    "test:e2e": "node_modules/cucumber/bin/cucumber-js --require test/acceptance/index.js --require test/acceptance/stepDefinitions"
+    "test:e2e": "node_modules/cucumber/bin/cucumber-js --require test/acceptance/index.js --require test/acceptance/stepDefinitions -f node_modules/cucumber-pretty "
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor",
@@ -29,6 +29,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "cucumber": "^5.1.0",
+    "cucumber-pretty": "^1.5.2",
     "eslint": "^4.5.0",
     "eslint-config-synacor": "^1.1.0",
     "expect": "^23.1.0",
