--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -7,8 +7,7 @@
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "storybook": "start-storybook",
     "build": "NODE_ENV=production preact build",
-    "serve": "yarn serve:gen-config && superstatic --port 8080 --host 0.0.0.0",
-    "serve:gen-config": "preact serve --server config --dest superstatic.json",
+    "serve": "node server.js",
     "dev": "preact watch",
     "test": "mocha --require babel-polyfill --require babel-register",
     "lint": "eslint src"
@@ -37,7 +36,7 @@
     "if-env": "^1.0.0",
     "mocha": "^5.2.0",
     "preact-cli": "^3.0.0-next.19",
-    "superstatic": "^5.0.1"
+    "pushstate-server": "^3.1.0"
   },
   "dependencies": {
     "lodash": "^4.17.5",
