--- a/parijat-frontend/.babelrc
+++ b/parijat-frontend/.babelrc
@@ -6,5 +6,9 @@
         "useBuiltIns": "entry"
       }
     ]
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-export-default-from"
   ]
 }
