--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -43,9 +43,8 @@
     "mocha": "^5.2.0",
     "nightwatch": "^1.2.4",
     "nightwatch-api": "^2.3.0",
-    "preact-cli": "^2.0.0",
-    "superstatic": "^5.0.1"
-    "preact-cli": "^3.0.0-next.19",
+    "superstatic": "^5.0.1",
+    "preact-cli": "^3.0.0-rc.7",
     "pushstate-server": "^3.1.0"
   },
   "dependencies": {
