--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -26,16 +26,16 @@
     "build/*"
   ],
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
-    "cucumber": "^5.1.0",
-    "cucumber-pretty": "^1.5.2",
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
     "@storybook/preact": "^5.0.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "core-js": "3",
+    "cucumber": "^5.1.0",
+    "cucumber-pretty": "^1.5.2",
     "eslint": "^4.5.0",
     "eslint-config-synacor": "^1.1.0",
     "expect": "^23.1.0",
@@ -43,18 +43,17 @@
     "mocha": "^5.2.0",
     "nightwatch": "^1.2.4",
     "nightwatch-api": "^2.3.0",
-    "superstatic": "^5.0.1",
     "preact-cli": "^3.0.0-rc.7",
-    "pushstate-server": "^3.1.0"
+    "pushstate-server": "^3.1.0",
+    "superstatic": "^5.0.1"
   },
   "dependencies": {
+    "dom-scroll-into-view": "^2.0.1",
     "lodash": "^4.17.5",
-    "preact": "^8.5.2",
-    "preact-compat": "^3.17.0",
-    "preact-material-components": "^1.4.0",
-    "preact-redux": "^2.1.0",
-    "preact-router": "^2.5.5",
-    "react-autocomplete": "^1.8.1",
+    "preact": "^10.4.4",
+    "preact-router": "^3.2.1",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.2.0",
     "react-render-html": "^0.6.0",
     "redux": "^4.0.4",
     "searchkit": "^2.3.0"
