feature: improve modal style and code

--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -30,7 +30,8 @@
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
-    "@storybook/preact": "^5.0.4",
+    "@storybook/preact": "^5.3.19",
+    "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "core-js": "3",
