--- a/parijat-frontend/.babelrc
+++ b/parijat-frontend/.babelrc
@@ -5,10 +5,14 @@
       {
         "useBuiltIns": "entry"
       }
-    ]
+    ],
+    "@babel/preset-react",
+    "@babel/
   ],
   "plugins": [
     "@babel/plugin-proposal-export-namespace-from",
-    "@babel/plugin-proposal-export-default-from"
+    "@babel/plugin-proposal-export-default-from",
+    ["@babel/plugin-syntax-class-properties", { "loose": true }],
+    "@babel/plugin-transform-react-jsx-source"
   ]
 }
