--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -37,16 +37,17 @@
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
+    "chromedriver": "^83.0.0",
     "core-js": "3",
-    "cucumber": "^5.1.0",
-    "cucumber-pretty": "^1.5.2",
+    "cucumber": "^6.0.5",
+    "cucumber-pretty": "^6.0.0",
     "eslint": "^4.5.0",
     "eslint-config-synacor": "^1.1.0",
     "expect": "^23.1.0",
     "if-env": "^1.0.0",
     "mocha": "^5.2.0",
-    "nightwatch": "^1.2.4",
-    "nightwatch-api": "^2.3.0",
+    "nightwatch": "^1.3.6",
+    "nightwatch-api": "^3.0.1",
     "preact-cli": "^3.0.0-rc.7",
     "preact-render-to-string": "^5.1.9",
     "pushstate-server": "^3.1.0"
