Test sonic for potentially replacing elasticsearch

--- a/.env
+++ b/.env
@@ -37,3 +37,6 @@ KIBANA_NODE_MEM_LIMIT_MB=512
 KIBANA_LOGGING_QUIET=true
 
 ##############################################################################
+
+# https://hub.docker.com/r/valeriansaliou/sonic/
+SONIC_VERSION=1.3.0
