--- a/bhupi/package.json
+++ b/bhupi/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=production node ./bin/www",
-    "start:dev": "NODE_ENV=development nodemon ./bin/www",
+    "start:dev": "NODE_ENV=development nodemon -r dotenv/config ./bin/www",
     "start:worker": "node worker/worker.js",
     "start:worker:dev": "nodemon worker/worker.js",
     "test:integration": "NODE_ENV=test mocha test/integration --watch",
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "hbs": "~4.0.4",
