--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -56,11 +56,11 @@
     "lodash": "^4.17.5",
     "preact": "^10.4.4",
     "preact-feather": "^4.1.0",
-    "preact-router": "^3.2.1",
     "prop-types": "^15.7.2",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-render-html": "^0.6.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
     "searchkit": "^2.3.0"
   }
