feature: add git pull and es index task

--- a/bhupi/.env
+++ b/bhupi/.env
@@ -1,2 +1,6 @@
 JWT_SECRET=jwt_sercret_to_set
 SESSION_SECRET=\xc7>1~\xdc\x92\xda\x9eN\x95\x84\x90\xfb^O\x19\xcb4\x89"\xd9g\xdf{
+REDIS_URL=http://redis:6379
+ES_URL=http://elasticsearch:9200
+ES_INDEX=akshara_nepali
+ES_PIPELINE=akshara_pipeline
