--- a/bhupi/package.json
+++ b/bhupi/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./bin/www",
+    "start": "NODE_ENV=production node -r dotenv/config ./bin/www",
     "start:dev": "NODE_ENV=development nodemon -r dotenv/config ./bin/www",
-    "start:worker": "node worker/worker.js",
-    "start:worker:dev": "nodemon worker/worker.js",
+    "start:worker": "node -r dotenv/config worker/worker.js",
+    "start:worker:dev": "nodemon --watch worker -r dotenv/config worker/worker.js",
     "test:integration": "NODE_ENV=test mocha test/integration --watch",
     "create:db:dev": "NODE_ENV=development knex migrate:latest && NODE_ENV=development knex seed:run"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "bull": "^3.16.0",
     "cookie-parser": "~1.4.4",
@@ -23,6 +24,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "lodash": "^4.17.19",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
