--- a/bhupi/package.json
+++ b/bhupi/package.json
@@ -14,6 +14,7 @@
     "@elastic/elasticsearch": "^7.8.0",
     "bcryptjs": "^2.4.3",
     "bull": "^3.16.0",
+    "bull-board": "^0.9.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
