fix: unicode path in git allowed

--- a/bhupi/Dockerfile
+++ b/bhupi/Dockerfile
@@ -3,6 +3,8 @@ FROM node:14.5.0-alpine3.12
 RUN apk --update add git less openssh && \
     rm -rf /var/lib/apt/lists/* && \
     rm /var/cache/apk/*
+# Without this unicode filename won't work correctly
+RUN git config --global core.quotePath false
 # Setup bhupi
 WORKDIR /usr/src/bhupi
 COPY package*.json ./
@@ -13,5 +15,6 @@ COPY . .
 RUN mkdir ~/.ssh
 RUN mv ./secrets/.ssh/id_rsa* ~/.ssh/
 RUN ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+RUN chmod 400 ~/.ssh/id_rsa
 EXPOSE 3000
 CMD [ "yarn", "start" ]
