feat: add link to bull-queue

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 */Pipfile.lock
 */sahitya-sangraha
 */kavitakosh
+*.sw*
 esdata/*
 */__pycache__*
 nepali-poems/kavitakosh
 nepali-poems/sangraha-data
 nepali-poems/sahitya-sangraha
 .idea
+elasticsearch/data/user-contributed
+bhupi/secrets
