--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -62,6 +62,8 @@
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
+    "redux-form": "^8.3.6",
+    "redux-logger": "^3.0.6",
     "searchkit": "^2.3.0"
   }
 }
