--- a/bhupi/package.json
+++ b/bhupi/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "lodash": "^4.17.19",
+    "mkdirp": "^1.0.4",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
