--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -53,10 +53,12 @@
   },
   "dependencies": {
     "dom-scroll-into-view": "^2.0.1",
+    "final-form": "^4.20.1",
     "lodash": "^4.17.5",
     "preact": "^10.4.4",
     "preact-feather": "^4.1.0",
     "prop-types": "^15.7.2",
+    "react-final-form": "^6.5.1",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-render-html": "^0.6.0",
