chore: bhupi -> vidyapati

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ nepali-poems/sangraha-data
 nepali-poems/sahitya-sangraha
 .idea
 elasticsearch/data/user-contributed
-bhupi/secrets
+vidyapati/secrets
