--- a/vidyapati/package.json
+++ b/vidyapati/package.json
@@ -34,13 +34,13 @@
     "pg": "^8.3.0",
     "redis": "^3.0.2",
     "replaceall": "^0.1.6",
-    "simple-git": "^2.14.0"
+    "simple-git": "^2.14.0",
+    "sinon": "^9.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^8.0.1",
-    "nodemon": "^2.0.4",
-    "passport-stub": "^1.1.1"
+    "nodemon": "^2.0.4"
   }
 }
